# Chunk-List-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: cargo_push.yml
src/: chunklist.rs  lib.rs  main.rs
tests/: chunklist_tests.rs
